# manta-auv

./: README.md  codecov.yml
.github/workflows/: codecoverage.yaml  reusable-codecov.yaml  semver.yaml  source-build.yaml
control/velocity_controller/: package.xml  setup.cfg  setup.py
control/velocity_controller/velocity_controller/: velocity_controller.py
control/velocity_controller_c/: CMakeLists.txt  package.xml
control/velocity_controller_c/scripts/: velocity_controller_c.py  velocity_controller_lqr_copy
control/velocity_controller_lqr/: CMakeLists.txt  package.xml
control/velocity_controller_lqr/scripts/: velocity_controller_lqr.py
control/velocity_controller_lqr_cpp/: CMakeLists.txt  package.xml
control/velocity_controller_lqr_cpp/config/: velocity_controller_lqr_cpp_config.yaml
control/velocity_controller_lqr_cpp/include/velocity_controller_lqr_cpp/: velocity_controller_lqr_cpp.hpp
control/velocity_controller_lqr_cpp/launch/: velocity_controller_lqr_cpp_launch.py
control/velocity_controller_lqr_cpp/src/: velocity_controller_lqr.cpp
mission/blackbox/: CMakeLists.txt
mission/blackbox/tests/: test_blackbox.py
motion/auv_guidance_and_control/config/: beluga.yaml
motion/auv_guidance_and_control/launch/: guidance_and_control.launch
motion/auv_guidance_and_control/scripts/: functions.py  guidance_and_control_node.py
motion/thrust_allocator_auv/src/: thrust_allocator_auv_node.cpp
